feat: add diagnostics bundle
